deploy/gtrainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtrainer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gtrainer
  ports:
    - name: http
      port: 8080
      targetPort: http
